--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# react / gatsby 
+# react / gatsby
 public/
 
 # vuepress build output
@@ -95,4 +95,7 @@ public/
 # DynamoDB Local files
 .dynamodb/
 
+
 # End of https://www.gitignore.io/api/node
+
+dev.js
