--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
+  },
   "private": true,
   "dependencies": {
     "http-proxy-middleware": "^0.20.0",
